fix: css gap

--- a/theme.css
+++ b/theme.css
@@ -53,7 +53,7 @@ body {
     align-items: start;
   }
 
-  @media screen and (miin-width: 768px) {
+  @media screen and (min-width: 768px) {
     gap: 5rem;
   }
 }
